--- Operating System, Graphics card ---
I tried this file in several computers with the same result: crash , W7 and Linux
--- Blender version with error, and version that worked ---
2.66 official release 64 bit
--- Short description of error ---
when this file has an output node connected in some of the channels it crashes, the channels usually are alpha, depth and UVs, maybe some others as well...
--- Steps for others to reproduce the error (preferably based on attached .blend file) ---
just hit the render button and you should see a crash, if it doesn´t crash please change the output folder manually into a different one and try again, it should crash.
This is a report from mfoxdogg using Linux:
http://www.pasteall.org/39922/
Description
Description