Fix #34359: 2.66 crashes when using output node

16bit PNG and Jpeg2K exporters were not aware of the simple
fact that float buffer could have only 3 or 1 channels.